[workspace]
members = [
    "ownership",
    "branches",
    "functions",
    "guessing_game",
    "helloworld",
    "variables",
    "references",
    "slice_type",
    "structs",
    "structs_examples",
    "structs_syntax",
    "enums",
    "match_control_flow",
    "my_project",
    "backyard",
    "restaurant",
]
resolver = "2"
